[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/slack_icon.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/SlackEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0238

[node name="SlackEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SlackIcon" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 1.90735e-06, -9.53674e-07 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="VisibilityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_screen_entered"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]
